<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



        <TextView
            android:id="@+id/section_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#8ABBDEFB"
            android:text="@string/section_code"
            android:textAllCaps="true"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />





        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title"
            android:textSize="15sp"
            android:textStyle="italic"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/section_code"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/activity_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_type"
            android:textSize="15sp"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/Semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semester"
            android:textSize="15sp"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_type"
            />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/status"
            android:textSize="15sp"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/Semester"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/course_level_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/section_code"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/course_level_image"
            app:srcCompat="@drawable/unknown_item"/>












</androidx.constraintlayout.widget.ConstraintLayout>